# forks

./: .dockerignore  .gitignore  Dockerfile  README.md  config.toml  pyproject.toml
app/: main.py
data/graphs/: minimal.toml  monster_party.toml
docs/: api.md
examples/graph_traversal/: graph_traversal.py
examples/pick_one/: app.py
forks/: db.py  graph.py  memory.py  models.py  prompt.py  route.py  switch.py  utils.py
static/css/: styles.css
templates/: index.html  page.html.jinja
