[tool.poetry]
name = "forks"
version = "0.0.1"
description = "LLM-based routing, think fuzzy if else statements"
authors = ["Foo <foo@bar.co>"]
license = "MIT"
readme = "README.md"
packages = [{include = "forks"}]
repository = "https://github.com/phiweger/forks"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.30.0"
black = "^24.4.2"
fastapi = "^0.111.0"
fastapi-cli = "^0.0.4"
groq = "^0.9.0"
instructor = "^1.3.4"
loguru = "^0.7.2"
networkx = "^3.3"
openai = "^1.35.4"
pydantic = "^2.7.4"
pydantic_core = "^2.18.4"
python-dotenv = "^1.0.1"
tenacity = "^8.4.2"
tiktoken = "^0.7.0"
tokenizers = "^0.19.1"
tqdm = "^4.66.4"
uvicorn = "^0.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
